# pylectormanga

./: README.md  pyproject.toml  requirements.txt  setup.py
pylectormanga/: __init__.py  lectormanga.py  model.py  network.py  page.py
